kube-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
  labels:
    app: reddit-clone-app
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /app1
spec:
  type: NodePort
  selector:
    app: reddit-clone-app
  ports:
    - port: 3000
      targetPort: 3000
